chore: setupBeforeProjectSchedule 세팅 완료

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 DISCORD_BOT_TOKEN=여기에_봇_토큰
 CLIENT_ID=여기에_앱_CLIENT_ID
+
+SERVER_ID=여기에_서버_ID
+TARGET_CHANNEL_ID=여기에_알림보낼_채널_ID
+
+PROJECT_PHASE=
+프로젝트 기간 전: before
+프로젝트 기간 중: during
