refactor: 모드 분기 기능 개발 및 코드 리팩토링

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,4 @@ CLIENT_ID=여기에_앱_CLIENT_ID
 SERVER_ID=여기에_서버_ID
 TARGET_CHANNEL_ID=여기에_알림보낼_채널_ID
 
-PROJECT_PHASE=
-프로젝트 기간 전: before
-프로젝트 기간 중: during
+PROJECT_PHASE=before | soft | hard
